--- a/txt/0-abstract.tex
+++ b/txt/0-abstract.tex
@@ -7,9 +7,9 @@
 The concept of \emph{Inverse Transparency} aims to ensure data sovereignty while allowing the sensible usage of sensitive data.
 The \emph{transparency toolchain} supports this approach and provides a technical framework.
 It ensures that all data accesses are transparently logged.
-This thesis contributes to the toolchain by designing and implementing an end-to-end encrypted protocol which allows users share and revoke access to their encrypted logs.
+This thesis contributes to the toolchain by designing and implementing an end-to-end encrypted protocol that allows users to share and revoke access to their encrypted logs.
 A survey of potential encryption techniques turns out that the elaborated requirements are fulfilled best when relying on hybrid encryption.
-The designed protocol was implemented as a cryptographic library which is available in Go, Python and Typescript.
+The designed protocol was implemented as a cryptographic library which is available in Go, Python, and Typescript.
 It assumes that a secure PKI is available and relies on the "JSON Web Encryption and Signing" standard.
 
 The toolchain was adopted to handle encrypted logs.
