--- a/txt/1-introduction.tex
+++ b/txt/1-introduction.tex
@@ -17,7 +17,7 @@ Data owners gain transparent insights into the usage of their data through those
 Who accessed which of my data and why?
 Moreover, data owners can define policies that restrict access to their data for data consumers.
 Only explicitly allowed data accesses are valid and succeed.
-This enables true data sovereignty because any harmful data usage can be discovered and may therefore be legally prosecuted.
+This enables true data sovereignty because any harmful data usage can be discovered and may be legally prosecuted.
 
 \citeauthor{Zieglmeier2021}~\cite{Zieglmeier2021} proposed a technical framework supporting this concept.
 In their work, they implemented a proof-of-concept \emph{transparency toolchain}.
@@ -38,7 +38,7 @@ It also allows data owners to define policies that restrict the access to certai
 \section{Problem statement}
 
 It is crucial to the concept of \emph{Inverse Transparency} that all data accesses are tracked.
-However, the illegal processing and usage of data does not become legal simply because the data owner is transparently informed about it~\cite{Boes2022}.
+However, the illegal processing and usage of data do not become legal simply because the data owner is transparently informed about it~\cite{Boes2022}.
 The harmful usage must be legally prosecuted.
 This motivates the idea that tracked data accesses can be shared in the system.
 If a data owner assumes that a given data access does not adhere to the data privacy regulations, the log can be forwarded to the legal department.
@@ -66,7 +66,7 @@ Specifically, the thesis
 (1)~designs a protocol based on a survey of multi-party encryption techniques,
 (2)~implements the designed protocol and publishes it for the programming languages Typescript, Go, and Python,
 (3)~integrates the implemented protocol into the existing toolchain, and 
-(4)~evaluates the implemented protocol in terms of functionality, security and performance.
+(4)~evaluates the implemented protocol in terms of functionality, security, and performance.
 
 \section{Outline}
 This initial chapter motivates the thesis.
@@ -77,10 +77,10 @@ Functional and non-functional requirements are supplemented by security requirem
 \cref{chap:overview} discusses different encryption techniques that can be used to implement those requirements.
 It also investigates modern end-to-end encrypted protocols and relates them to the concept proposed by this thesis.
 The theoretical design of the protocol is detailed in \cref{chap:design}.
-It specifies how logs are signed, encrypted, and decrypted to fullfil the given requirements.
+It specifies how logs are signed, encrypted, and decrypted to fulfill the given requirements.
 \cref{chap:implementation} describes the cryptographic libraries implemented to realize the designed protocol.
 It also elaborates on the changes made in the existing toolchain to support encrypted logs.
-Given the requirements and the implementation, \cref{chap:evaluation} evaluates the protocol in terms of functionality, security and performance.
+Given the requirements and the implementation, \cref{chap:evaluation} evaluates the protocol in terms of functionality, security, and performance.
 Finally, \cref{chap:conclusion} summarizes the major results of the thesis and concludes the thesis. 
 It also discusses its limitations.
 
