--- a/txt/99-appendix.tex
+++ b/txt/99-appendix.tex
@@ -12,7 +12,7 @@ For details about their functionality have a look to \cref{chap:design}.
 \begin{figure}[h]
     \includegraphics[scale=0.158]{../img/05/encrypt_logs.png}
     \centering
-    \caption[Encryption algorithm]{The encryption algorithm takes a signed log and a set of receivers as input. It returns a JWE-token which can only be decrypted by the specified set of users.}
+    \caption[Encryption algorithm]{The encryption algorithm takes a signed log and a set of receivers as input. It returns a JWE token which can only be decrypted by the specified set of users.}
     \label{app:encryption_algo}
 \end{figure}
 \newpage
